[gd_scene load_steps=5 format=2]

[ext_resource path="res://Komikat.tres" type="DynamicFont" id=1]
[ext_resource path="res://Emulator.gd" type="Script" id=2]
[ext_resource path="res://Answers.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="Emulator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
margin_right = 1280.0
margin_bottom = 24.0
custom_constants/separation = 20

[node name="CampaignName" type="LineEdit" parent="VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 298.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SaveCampaignButton" type="Button" parent="VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 318.0
margin_right = 425.0
margin_bottom = 24.0
disabled = true
text = "Save Campaign"

[node name="NewCampaignButton" type="Button" parent="VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 445.0
margin_right = 551.0
margin_bottom = 24.0
disabled = true
text = "New Campaign"

[node name="CampaignSelectButton" type="MenuButton" parent="VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 571.0
margin_right = 664.0
margin_bottom = 24.0
text = "Campaigns >"
flat = false

[node name="Button" type="Button" parent="VBoxContainer2/HBoxContainer2"]
visible = false
margin_left = 543.0
margin_right = 694.0
margin_bottom = 24.0
text = "Export Campaign Logs"

[node name="Seperator2" type="Control" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 684.0
margin_right = 1280.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 28.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
margin_right = 1020.0
margin_bottom = 692.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
custom_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_right = 1020.0
margin_bottom = 24.0

[node name="SceneLine" type="LineEdit" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 933.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="AddSceneButton" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 937.0
margin_right = 1016.0
margin_bottom = 24.0
disabled = true
text = "Add Scene"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 1020.0
margin_right = 1020.0
margin_bottom = 24.0

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 1020.0
margin_bottom = 67.0
custom_constants/separation = 50

[node name="Label2" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_top = 9.0
margin_right = 22.0
margin_bottom = 23.0
text = "Log"

[node name="ScenesButton" type="MenuButton" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 72.0
margin_right = 141.0
margin_bottom = 33.0
size_flags_horizontal = 0
text = "Scenes >"
flat = false

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 191.0
margin_right = 1020.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer2"]
margin_top = 9.0
margin_right = 412.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Chaos Factor"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer2"]
margin_left = 416.0
margin_right = 829.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_constants/separation = 50
alignment = 1

[node name="LowerChaos" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
margin_left = 113.0
margin_right = 146.0
margin_bottom = 33.0
rect_min_size = Vector2( 33, 0 )
text = "-"

[node name="ChaosFactor" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
margin_left = 196.0
margin_right = 217.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 1 )
text = "5"
align = 1

[node name="IncreaseChaos" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
margin_left = 267.0
margin_right = 300.0
margin_bottom = 33.0
rect_min_size = Vector2( 33, 0 )
text = "+"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 1020.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer/PanelContainer"]
margin_right = 1020.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="LogScrollContainer" type="ScrollContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 10.0
margin_right = 1010.0
margin_bottom = 483.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="LogBox" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/LogScrollContainer"]
unique_name_in_owner = true
margin_right = 1000.0
margin_bottom = 473.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 580.0
margin_right = 1020.0
margin_bottom = 604.0

[node name="CommentLine" type="LineEdit" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
margin_right = 912.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="AddCommentButton" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
margin_left = 916.0
margin_right = 1020.0
margin_bottom = 24.0
disabled = true
text = "Add Comment"

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 614.0
margin_right = 1020.0
margin_bottom = 628.0
text = "Answer a Question"
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 638.0
margin_right = 1020.0
margin_bottom = 662.0

[node name="QuestionLine" type="LineEdit" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_right = 1020.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Answers" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 672.0
margin_right = 1020.0
margin_bottom = 692.0
size_flags_horizontal = 3
custom_constants/separation = 10
script = ExtResource( 3 )

[node name="Answer1" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Answers"]
margin_right = 84.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Impossible"

[node name="Answer2" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Answers"]
margin_left = 94.0
margin_right = 163.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "No Way"

[node name="Answer3" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Answers"]
margin_left = 173.0
margin_right = 269.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Very Unlikely"

[node name="Answer4" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Answers"]
margin_left = 279.0
margin_right = 349.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Unlikely"

[node name="Answer5" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Answers"]
margin_left = 359.0
margin_right = 428.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "50/50"

[node name="Answer6" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Answers"]
margin_left = 438.0
margin_right = 557.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Somewhat Likely"

[node name="Answer7" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Answers"]
margin_left = 567.0
margin_right = 637.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Likely"

[node name="Answer8" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Answers"]
margin_left = 647.0
margin_right = 728.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Very Likely"

[node name="Answer9" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Answers"]
margin_left = 738.0
margin_right = 848.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Near Sure thing"

[node name="Answer10" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Answers"]
margin_left = 858.0
margin_right = 934.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Sure thing"

[node name="Answer11" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Answers"]
margin_left = 944.0
margin_right = 1020.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Has To Be"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
margin_left = 1024.0
margin_right = 1280.0
margin_bottom = 692.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_right = 256.0
margin_bottom = 692.0
size_flags_vertical = 3
custom_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_right = 256.0
margin_bottom = 20.0

[node name="Label3" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 232.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Characters"

[node name="AddCharacterButton" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 236.0
margin_right = 256.0
margin_bottom = 20.0
text = "+"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 25.0
margin_right = 256.0
margin_bottom = 343.0
size_flags_vertical = 3
custom_constants/margin_left = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_right = 256.0
margin_bottom = 318.0
scroll_horizontal_enabled = false

[node name="CharactersList" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 246.0
margin_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 348.0
margin_right = 256.0
margin_bottom = 368.0

[node name="Label3" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 232.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Threads"

[node name="AddThreadButton" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 236.0
margin_right = 256.0
margin_bottom = 20.0
text = "+"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 373.0
margin_right = 256.0
margin_bottom = 692.0
size_flags_vertical = 3
custom_constants/margin_left = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/VBoxContainer/MarginContainer2"]
margin_left = 10.0
margin_right = 256.0
margin_bottom = 319.0
scroll_horizontal_enabled = false

[node name="ThreadsList" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/VBoxContainer/MarginContainer2/ScrollContainer"]
unique_name_in_owner = true
margin_right = 246.0
margin_bottom = 319.0
size_flags_horizontal = 3
size_flags_vertical = 3
